# Yolov11_Tensorrt_ROS

./: README.md  package.xml  start.sh
config/: yolov11n.yaml
include/: postprocess.h
launch/: detector.launch
onnx_model/: export.py
src/: main.cpp  preprocess.cu
src/yolo11_tensorrt/: CMakeLists.txt
src/yolo11_tensorrt/config/: yolov11n.yaml
src/yolo11_tensorrt/include/: infer.h  utils.h
src/yolo11_tensorrt/rviz/: detector_lv.rviz
src/yolo11_tensorrt/scripts/: yolov11_detector.py  yolov11_infer.py  yolov11_infer_node.py
src/yolo11_tensorrt/src/: infer.cpp  postprocess.cu
